src/objects/Service_Line__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - Date of the template version</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLD-PSA-ESIDSSR-325 Service Lines specify a group to apply to Service Line Projects on project creation.</description>
        <inlineHelpText>This group will be automatically applied to any service line projects that area created with this service line.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Service Lines</relationshipLabel>
        <relationshipName>Service_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_Tasks_on_Deliverables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - Service Milestones will inherit this setting and if checked will auto add pricing tasks to the deliverable as they are created.</description>
        <inlineHelpText>Service Milestones will inherit this setting and if checked will auto add pricing tasks to the deliverable as they are created.</inlineHelpText>
        <label>Include Tasks on Deliverables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Line_Code__c</fullName>
        <description>PSA-CLD-USNONE - Unique code used by the system for lookups</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique code used by the system for lookups</inlineHelpText>
        <label>Service Line Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Line</label>
    <nameField>
        <label>Service Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>